--- a/Lugat/Views/Admin/BolimPage.cshtml
+++ b/Lugat/Views/Admin/BolimPage.cshtml
@@ -135,6 +135,9 @@
                         <td>
                             <a asp-controller="Admin" asp-action="UpdateBolim" asp-route-id="@bolim.Id" class="btn btn-warning">Tahrirlash</a>
                             <a asp-controller="Admin" asp-action="DeleteBolim" asp-route-id="@bolim.Id" class="btn btn-danger">O'chirish</a>
+                            <a asp-controller="Admin" asp-action="WordPage" asp-route-id="@bolim.Id" class="btn btn-danger">WordPage</a>
+                            <a asp-controller="Admin" asp-action="AddWord" asp-route-id="@bolim.Id" class="btn btn-danger">AddWord</a>
+
                         </td>
                     </tr>
                 }
