--- a/Lugat/Views/Admin/WordPage.cshtml
+++ b/Lugat/Views/Admin/WordPage.cshtml
@@ -1,4 +1,5 @@
-﻿@using Lugat.Models.Foundations.Words
+﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@using Lugat.Models.Foundations.Words
 @model IEnumerable<Word>
 
 <h2>@ViewData["Title"]</h2>
@@ -36,7 +37,7 @@ else
     <p>No words available for this Bolim.</p>
 }
 
-<a asp-controller="Admin" asp-action="Index" class="btn btn-primary">Back to List</a>
+<a asp-controller="Admin" asp-action="Index" class="btn btn-primary">Orqaga</a>
 
 <style>
     /* General container for the table */
