--- a/Lugat/Views/Admin/AddBolim.cshtml
+++ b/Lugat/Views/Admin/AddBolim.cshtml
@@ -9,28 +9,23 @@
 <div class="container">
     <h2>Bo'lim qo'shish</h2>
 
-    <form asp-action="CreateBolim" method="post">
+    <form asp-controller="Admin" asp-action="CreateBolim" enctype="multipart/form-data">
         <div class="form-group">
-            <label for="Name">Bo'lim Nomi</label>
-            <input type="text" class="form-control" id="Name" name="Name" required />
+            <label asp-for="Name"></label>
+            <input asp-for="Name" class="form-control" />
         </div>
-
         <div class="form-group">
-            <label for="SectionPicture">Section Picture</label>
-            <input type="text" class="form-control" id="SectionPicture" name="SectionPicture" required />
+            <label asp-for="Star"></label>
+            <input asp-for="Star" type="number" class="form-control" />
         </div>
-
+         <div class="form-group">
+            <input asp-for="CategoryId" type="hidden" />
+        </div> 
         <div class="form-group">
-            <label for="Star">Star</label>
-            <input type="number" class="form-control" id="Star" name="Star" required />
+            <label asp-for="SectionPicture">Upload Picture</label>
+            <input type="file" name="sectionPicture" class="form-control" />
         </div>
-
-        <input type="hidden" name="CategoryId" value="@Model.CategoryId" />
-
-        <div class="form-group">
-            <button type="submit" class="btn btn-success">Qo'shish</button>
-            <a asp-action="BolimPage" asp-route-id="@Model.CategoryId" class="btn btn-secondary">Bekor qilish</a>
-        </div>
+        <button type="submit" class="btn btn-primary">Create</button>
     </form>
 </div>
 <style>
