--- a/Lugat/Views/Admin/Index.cshtml
+++ b/Lugat/Views/Admin/Index.cshtml
@@ -33,7 +33,7 @@
                     <td>@category.Star</td>
                     <td>
                         <a asp-controller="Admin" asp-action="BolimPage" asp-route-id="@category.Id" class="btn btn-success bolimclass">Bolim</a>
-                        <a asp-controller="Admin" asp-action="AddBolim" asp-route-id="@category.Id" class="btn btn-success bolimclass">AddBolim</a>
+                       @*  <a asp-controller="Admin" asp-action="AddBolim" asp-route-id="@category.Id" class="btn btn-success bolimclass">AddBolim</a> *@
                         <a asp-controller="Admin" asp-action="UpdateCate" asp-route-id="@category.Id" class="btn btn-warning">Edit</a>
                         <a asp-controller="Admin" asp-action="Delete" asp-route-id="@category.Id" class="btn btn-danger">Delete</a>
                     </td>
